# warb

./: Cargo.toml  LICENSE  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
cpp/: warb_abi.h  warb_dispatch.h  warb_shim.cc  warb_shim.h
examples/: to_rgba.rs  to_rgba_pipelined.rs
src/: decoder.rs  error.rs  format.rs  handler.rs  handles.rs  lib.rs
tests/: sdk_roundtrip.rs
